JT-10928 Fix spacing of Overview tab

--- a/app/assets/stylesheets/pages/community/_communities.scss
+++ b/app/assets/stylesheets/pages/community/_communities.scss
@@ -718,7 +718,7 @@ svg {
   }
 
   .overview-list {
-    margin-bottom: 10px;
+    margin: 10px 0;
   }
 
   .speech-bubble, .speech-bubble.left {
